--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -699,6 +699,42 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Url                      = {http://www.w3.org/TR/2014/REC-rdf11-concepts-20140225/}
 }
 
+@TechReport{DDIAlliance-DDI-L-MD-2015,
+  Title                    = {{DDI-Lifecycle MD (Model-Driven)}},
+  Author                   = {{DDI Alliance}},
+  Institution              = {{DDI Alliance}},
+  Year                     = {2015},
+  Month                    = {March},
+  Note                     = {\url{http://www.ddialliance.org/ddi-moving-forward-process-summary}},
+  Type                     = {{DDI Alliance Development Draft}},
+
+  Url                      = {\url{http://www.ddialliance.org/ddi-moving-forward-process-summary}}
+}
+
+@TechReport{DDIAlliance-DDI-L-2014,
+  Title                    = {{Data Documentation Initiative (DDI) Lifecycle 3.2}},
+  Author                   = {{DDI Alliance}},
+  Institution              = {{DDI Alliance}},
+  Year                     = {2014},
+  Month                    = {March},
+  Note                     = {\url{http://www.ddialliance.org/Specification/DDI-Lifecycle/3.2/}},
+  Type                     = {{DDI Alliance Specification}},
+
+  Url                      = {\url{http://www.ddialliance.org/Specification/DDI-Lifecycle/3.2/}}
+}
+
+@TechReport{DDIAlliance-DDI-C-2013,
+  Title                    = {{Data Documentation Initiative (DDI) Codebook 2.5.1}},
+  Author                   = {{DDI Alliance}},
+  Institution              = {{DDI Alliance}},
+  Year                     = {2013},
+  Month                    = {December},
+  Note                     = {\url{http://www.ddialliance.org/Specification/DDI-Codebook/2.5/}},
+  Type                     = {{DDI Alliance Specification}},
+
+  Url                      = {\url{http://www.ddialliance.org/Specification/DDI-Codebook/2.5/}}
+}
+
 @Article{Decker-2000,
   Title                    = {{The Semantic Web: the Roles of XML and RDF}},
   Author                   = {Decker, S. and Melnik, S. and van Harmelen, F. and Fensel, D. and Klein, M. and Broekstra, J. and Erdmann, M. and Horrocks, I.},
@@ -875,34 +911,6 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Type                     = {{Oracle Specification}},
 
   Url                      = {https://docs.oracle.com/javase/specs/jls/se8/html/index.html}
-}
-
-@TechReport{DDIAlliance-DDI-L-2014,
-  Title                    = {{Data Documentation Initiative (DDI) Lifecycle 3.2}},
-  Author                   = {Gregory, Arofan and Thomas, Wendy and Wackerow, Joachim},
-  Institution              = {{DDI Alliance}},
-  Year                     = {2014},
-  Month                    = {March},
-  Note                     = {http://www.ddialliance.org/Specification/DDI-Lifecycle/3.2/},
-  Type                     = {{DDI Alliance Specification}},
-
-  Owner                    = {Thomas Bosch},
-  Timestamp                = {2014.11.08},
-  Url                      = {http://www.ddialliance.org/Specification/DDI-Lifecycle/3.2/}
-}
-
-@TechReport{DDIAlliance-DDI-C-2013,
-  Title                    = {{Data Documentation Initiative (DDI) Codebook 2.5.1}},
-  Author                   = {Gregory, Arofan and Thomas, Wendy and Wackerow, Joachim},
-  Institution              = {{DDI Alliance}},
-  Year                     = {2013},
-  Month                    = {December},
-  Note                     = {http://www.ddialliance.org/Specification/DDI-Codebook/2.5/},
-  Type                     = {{DDI Alliance Specification}},
-
-  Owner                    = {Thomas Bosch},
-  Timestamp                = {2014.11.08},
-  Url                      = {http://www.ddialliance.org/Specification/DDI-Codebook/2.5/}
 }
 
 @InCollection{haarslev2001racer,
@@ -1116,6 +1124,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Url                      = {http://dx.doi.org/10.1007/11914853_56}
 }
 
+@TechReport{W3C-SPIN-2011,
+  Title                    = {{SPIN - Overview and Motivation}},
+  Author                   = {Knublauch, Holger and Hendler, James A. and Idehen, Kingsley},
+  Institution              = {W3C},
+  Year                     = {2011},
+  Month                    = {February},
+  Note                     = {\url{http://www.w3.org/Submission/2011/SUBM-spin-overview-20110222/}},
+  Type                     = {{W3C Member Submission}},
+
+  Utl                      = {\url{http://www.w3.org/Submission/2011/SUBM-spin-overview-20110222/}}
+}
+
 @InProceedings{Kobeissy-2007,
   Title                    = {{Mapping XML to OWL for Seamless Information Retrieval in Context-Aware Environments}},
   Author                   = {Kobeissy, Nassim and Zeghlache, Djamal and Genet, Marc Girod},
@@ -1250,6 +1270,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Note                     = {\url{http://infolab.stanford.edu/~melnik/rdf/fusion.html}},
 
   Url                      = {\url{http://infolab.stanford.edu/~melnik/rdf/fusion.html}}
+}
+
+@TechReport{W3C-SKOS-2009,
+  Title                    = {{SKOS Simple Knowledge Organization System Reference}},
+  Author                   = {Miles, Alistair and Bechhofer, Sean},
+  Institution              = {W3C},
+  Year                     = {2009},
+  Month                    = {August},
+  Note                     = {\url{http://www.w3.org/TR/2009/REC-skos-reference-20090818/}},
+  Type                     = {{W3C Recommendation}},
+
+  Url                      = {\url{http://www.w3.org/TR/2009/REC-skos-reference-20090818/}}
 }
 
 @TechReport{Minsky-1974,
@@ -1656,6 +1688,16 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 
   Owner                    = {Thomas Bosch},
   Timestamp                = {2014.11.07}
+}
+
+@TechReport{Schmachtenberg-2014,
+  Title                    = {{State of the LOD Cloud 2014}},
+  Author                   = {Schmachtenberg, Max and Bizer, Christian and Paulheim, Heiko},
+  Institution              = {University of Mannheim},
+  Year                     = {2014},
+  Note                     = {\url{http://linkeddatacatalog.dws.informatik.uni-mannheim.de/state/}},
+
+  Url                      = {\url{http://linkeddatacatalog.dws.informatik.uni-mannheim.de/state/}}
 }
 
 @TechReport{Schneider2009,
