--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -170,6 +170,24 @@
   Publisher                = {GI}
 }
 
+@Article{Boneva-2014,
+  Title                    = {{Validating RDF with Shape Expressions}},
+  Author                   = {Iovka Boneva and
+ Jos{\'{e}} Emilio Labra Gayo and
+ Samuel Hym and
+ Eric G. Prud'hommeau and
+ Harold R. Solbrig and
+ Slawek Staworko},
+  Journal                  = {Computing Research Repository (CoRR)},
+  Year                     = {2014},
+  Volume                   = {abs/1404.1270},
+
+  Bibsource                = {dblp computer science bibliography, http://dblp.org},
+  Biburl                   = {http://dblp.uni-trier.de/rec/bib/journals/corr/BonevaGHPSS14},
+  Timestamp                = {Thu, 01 May 2014 14:56:20 +0200},
+  Url                      = {http://arxiv.org/abs/1404.1270}
+}
+
 @TechReport{Bos-1997,
   Title                    = {{The XML Data Model}},
   Author                   = {Bos, Bert},
@@ -1569,6 +1587,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Pages                    = {133--173}
 }
 
+@TechReport{W3C-ShEx-Primer-2014,
+  Title                    = {{Shape Expressions 1.0 Primer}},
+  Author                   = {Prud'hommeaux, Eric},
+  Institution              = {W3C},
+  Year                     = {2014},
+  Month                    = {June},
+  Note                     = {\url{http://www.w3.org/Submission/2014/SUBM-shex-primer-20140602/}},
+  Type                     = {{W3C Member Submission}},
+
+  Url                      = {http://www.w3.org/Submission/2014/SUBM-shex-primer-20140602/}
+}
+
 @TechReport{W3C-Turtle-2014,
   Title                    = {{RDF 1.1 Turtle - Terse RDF Triple Language}},
   Author                   = {Prud'hommeaux, Eric and Carothers, Gavin},
@@ -1581,6 +1611,26 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Owner                    = {Thomas},
   Timestamp                = {2014.05.03},
   Utl                      = {http://www.w3.org/TR/2014/REC-turtle-20140225/}
+}
+
+@InProceedings{Prud'hommeaux-2014,
+  Title                    = {{Shape Expressions: An RDF Validation and Transformation Language}},
+  Author                   = {Prud'hommeaux, Eric and Labra Gayo, Jose Emilio and Solbrig, Harold},
+  Booktitle                = {{Proceedings of the 10th International Conference on Semantic Systems (SEMANTiCS)}},
+  Year                     = {2014},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {32--40},
+  Publisher                = {ACM},
+  Series                   = {SEMANTiCS 2014},
+
+  Acmid                    = {2660523},
+  Doi                      = {10.1145/2660517.2660523},
+  ISBN                     = {978-1-4503-2927-9},
+  Keywords                 = {RDF, graphs, transformation, validation},
+  Location                 = {Leipzig, Germany},
+  Numpages                 = {9},
+  Url                      = {http://doi.acm.org/10.1145/2660517.2660523}
 }
 
 @InProceedings{Reif-2005,
@@ -1642,6 +1692,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Type                     = {{W3C Recommendation}},
 
   Url                      = {\url{http://www.w3.org/TR/2014/REC-xquery-30-20140408/}}
+}
+
+@TechReport{W3C-ReSh-2014,
+  Title                    = {{Resource Shape 2.0}},
+  Author                   = {Ryman, Arthur},
+  Institution              = {W3C},
+  Year                     = {2014},
+  Month                    = {February},
+  Note                     = {\url{http://www.w3.org/Submission/2014/SUBM-shapes-20140211/}},
+  Type                     = {{W3C Member Submission}},
+
+  Url                      = {http://www.w3.org/Submission/2014/SUBM-shapes-20140211/}
 }
 
 @InProceedings{Ryman2013,
@@ -1767,6 +1829,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
 
   Owner                    = {Thomas},
   Timestamp                = {2014.05.01}
+}
+
+@TechReport{W3C-ShEx-Definition-2014,
+  Title                    = {{Shape Expressions 1.0 Definition}},
+  Author                   = {Solbrig, Harold and Prud'hommeaux, Eric},
+  Institution              = {W3C},
+  Year                     = {2014},
+  Month                    = {June},
+  Note                     = {\url{http://www.w3.org/Submission/2014/SUBM-shex-defn-20140602/}},
+  Type                     = {{W3C Member Submission}},
+
+  Url                      = {http://www.w3.org/Submission/2014/SUBM-shex-defn-20140602/}
 }
 
 @TechReport{W3C-JSON-2014,
