--- a/literature/literature.bib
+++ b/literature/literature.bib
@@ -674,6 +674,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Type                     = {{ISO Standard}}
 }
 
+@TechReport{DCMI-DCAP-2009,
+  Title                    = {{Guidelines for Dublin Core Application Profiles}},
+  Author                   = {Coyle, Karen and Baker, Thomas},
+  Institution              = {Dublin Core Metadata Initiative (DCMI)},
+  Year                     = {2009},
+  Month                    = {May},
+  Note                     = {\url{http://dublincore.org/documents/2009/05/18/profile-guidelines/}},
+  Type                     = {{DCMI Recommended Resource}},
+
+  Url                      = {http://dublincore.org/documents/2009/05/18/profile-guidelines/}
+}
+
 @InProceedings{Cyganiak2010,
   Title                    = {{Semantic Statistics: Bringing Together SDMX and SCOVO}},
   Author                   = {Cyganiak, Richard and Field, Simon and Gregory, Arofan and Halb, Wolfgang and Tennison, Jeni},
@@ -1384,6 +1396,42 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Url                      = {http://doi.acm.org/10.1145/1111627.1111631}
 }
 
+@TechReport{DCMI-DSP-2008,
+  Title                    = {{Description Set Profiles: A Constraint Language for Dublin Core Application Profiles}},
+  Author                   = {Nilsson, Mikael},
+  Institution              = {Dublin Core Metadata Initiative (DCMI)},
+  Year                     = {2008},
+  Month                    = {March},
+  Note                     = {\url{http://dublincore.org/documents/2008/03/31/dc-dsp/}},
+  Type                     = {{DCMI Working Draft}},
+
+  Url                      = {http://dublincore.org/documents/2008/03/31/dc-dsp/}
+}
+
+@TechReport{DCMI-Singapore-2008,
+  Title                    = {{The Singapore Framework for Dublin Core Application Profiles}},
+  Author                   = {Nilsson, Mikael and Baker, Thomas and Johnston, Pete},
+  Institution              = {Dublin Core Metadata Initiative (DCMI)},
+  Year                     = {2008},
+  Month                    = {January},
+  Note                     = {\url{http://dublincore.org/documents/2008/01/14/singapore-framework/}},
+  Type                     = {{DCMI Recommended Resource}},
+
+  Url                      = {http://dublincore.org/documents/2008/01/14/singapore-framework/}
+}
+
+@TechReport{DCMI-DC-RDF-2008,
+  Title                    = {{Expressing Dublin Core Metadata using the Resource Description Framework (RDF)}},
+  Author                   = {Nilsson, Mikael and Powel, Andy and Johnston, Pete and Naeve, Ambjörn},
+  Institution              = {Dublin Core Metadata Initiative (DCMI)},
+  Year                     = {2008},
+  Month                    = {January},
+  Note                     = {\url{http://dublincore.org/documents/2008/01/14/dc-rdf/}},
+  Type                     = {{DCMI Recommendation}},
+
+  Url                      = {http://dublincore.org/documents/2008/01/14/dc-rdf/}
+}
+
 @InCollection{nolle2014efficient,
   Title                    = {{Efficient Federated Debugging of Lightweight Ontologies}},
   Author                   = {Nolle, Andreas and Meilicke, Christian and Stuckenschmidt, Heiner and Nemirovski, German},
@@ -1585,6 +1633,18 @@ http://www.inderscience.com/info/inarticle.php?artid=57760},
   Publisher                = {Springer},
   Year                     = {2008},
   Pages                    = {133--173}
+}
+
+@TechReport{DCMI-Abstract-Model-2007,
+  Title                    = {{DCMI Abstract Model}},
+  Author                   = {Powell, Andy and Nilsson, Mikael and Naeve, Ambjörn and Johnston, Pete and Baker, Thomas},
+  Institution              = {Dublin Core Metadata Initiative (DCMI)},
+  Year                     = {2007},
+  Month                    = {June},
+  Note                     = {\url{http://dublincore.org/documents/2007/06/04/abstract-model/}},
+  Type                     = {{DCMI Recommendation}},
+
+  Url                      = {http://dublincore.org/documents/2007/06/04/abstract-model/}
 }
 
 @TechReport{W3C-ShEx-Primer-2014,
